# tax-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md  transactions_clean.csv
src/: args.rs  exchange_rate.rs  main.rs  models.rs  process.rs
test-data/: binance.csv
