[package]
name = "tax-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.37.0", features = ["full"] } # for our async runtime   
time = "0.3.36"
