[package]
name = "tax-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }   
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }   
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
